--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <header>
         <h1>My TODO List</h1>
     </header>
-
     <form>
+         <label id="date"></label>
          <input type="text" name="inputForm" class="todo_inputItem">
          <button class="todo_buton" type="submit"><i class="fas fa-plus-square fa-2x"></i></button>
 
